--- a/ForestSimulation.vbproj
+++ b/ForestSimulation.vbproj
@@ -113,5 +113,8 @@
         </None>
         <None Include="packages.config" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Animals" />
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
